@@ -1,52 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2016/08/28 15:33:09 wiz Exp $
-${PYSITELIB}/${EGG_NAME}-nspkg.pth
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/namespace_packages.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/stsci/distutils/__init__.py
-${PYSITELIB}/stsci/distutils/__init__.pyc
-${PYSITELIB}/stsci/distutils/__init__.pyo
-${PYSITELIB}/stsci/distutils/astutils.py
-${PYSITELIB}/stsci/distutils/astutils.pyc
-${PYSITELIB}/stsci/distutils/astutils.pyo
-${PYSITELIB}/stsci/distutils/command/__init__.py
-${PYSITELIB}/stsci/distutils/command/__init__.pyc
-${PYSITELIB}/stsci/distutils/command/__init__.pyo
-${PYSITELIB}/stsci/distutils/command/build_optional_ext.py
-${PYSITELIB}/stsci/distutils/command/build_optional_ext.pyc
-${PYSITELIB}/stsci/distutils/command/build_optional_ext.pyo
-${PYSITELIB}/stsci/distutils/command/easier_install.py
-${PYSITELIB}/stsci/distutils/command/easier_install.pyc
-${PYSITELIB}/stsci/distutils/command/easier_install.pyo
-${PYSITELIB}/stsci/distutils/hooks.py
-${PYSITELIB}/stsci/distutils/hooks.pyc
-${PYSITELIB}/stsci/distutils/hooks.pyo
-${PYSITELIB}/stsci/distutils/release.py
-${PYSITELIB}/stsci/distutils/release.pyc
-${PYSITELIB}/stsci/distutils/release.pyo
-${PYSITELIB}/stsci/distutils/svnutils.py
-${PYSITELIB}/stsci/distutils/svnutils.pyc
-${PYSITELIB}/stsci/distutils/svnutils.pyo
-${PYSITELIB}/stsci/distutils/tests/__init__.py
-${PYSITELIB}/stsci/distutils/tests/__init__.pyc
-${PYSITELIB}/stsci/distutils/tests/__init__.pyo
-${PYSITELIB}/stsci/distutils/tests/test_commands.py
-${PYSITELIB}/stsci/distutils/tests/test_commands.pyc
-${PYSITELIB}/stsci/distutils/tests/test_commands.pyo
-${PYSITELIB}/stsci/distutils/tests/test_hooks.py
-${PYSITELIB}/stsci/distutils/tests/test_hooks.pyc
-${PYSITELIB}/stsci/distutils/tests/test_hooks.pyo
-${PYSITELIB}/stsci/distutils/tests/util.py
-${PYSITELIB}/stsci/distutils/tests/util.pyc
-${PYSITELIB}/stsci/distutils/tests/util.pyo
-${PYSITELIB}/stsci/distutils/version.py
-${PYSITELIB}/stsci/distutils/version.pyc
-${PYSITELIB}/stsci/distutils/version.pyo
-${PYSITELIB}/stsci/distutils/versionutils.py
-${PYSITELIB}/stsci/distutils/versionutils.pyc
-${PYSITELIB}/stsci/distutils/versionutils.pyo
